--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Claudia Wang's Porfolio</title>
+    <title>Claudiawang.GitHub.io by claudiawang-tech</title>
   </head>
 
   <body>
