--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Claudiawang.GitHub.io by claudiawang-tech</title>
+    <title>Claudia Wang&#39;s Porfolio by claudiawang-tech</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Claudiawang.GitHub.io</h1>
+        <h1>Claudia Wang&#39;s Porfolio</h1>
         <h2></h2>
         <a href="https://github.com/claudiawang-tech/claudiawang.github.io" class="button"><small>View project on</small> GitHub</a>
       </div>
@@ -29,7 +29,7 @@
       <div class="inner clearfix">
         <section id="main-content">
           <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="hello-this-is-claudia-wang" class="anchor" href="#hello-this-is-claudia-wang" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hello! This is Claudia Wang.</h3>
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
