Create master branch via GitHub

--- a/index.html
+++ b/index.html
@@ -12,38 +12,82 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Claudia Wang&#39;s Porfolio</h1>
-      <h2 class="project-tagline"></h2>
+      <h2 class="project-tagline">Data Science | Data Analytics |  Business Analytics</h2>
       <a href="https://github.com/claudiawang-tech/claudiawang.github.io" class="btn">View on GitHub</a>
       <a href="https://github.com/claudiawang-tech/claudiawang.github.io/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/claudiawang-tech/claudiawang.github.io/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
-      <h3>
+      <h1>
 <a id="about-me" class="anchor" href="#about-me" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><strong>About Me.</strong>
-</h3>
-<p>Hello! This is Claudia Wang. A detail-oriented Data Analyst professional.</p>
-<p>I recently completed the Master of Business Analytics from SCHULICH School of Business, York University and worked as a Data Analyst Intern at the Art Gallery of Ontario during the last eight months.</p>
+</h1>
+<p>Hello! This is <strong>Claudia Wang</strong>. A detail-oriented <strong>Data Analyst professional</strong>.</p>
+<p>I recently completed the <strong>Master of Business Analytics</strong> from SCHULICH School of Business, York University and worked as a <strong>Data Analyst Intern</strong> at the Art Gallery of Ontario during the last eight months.</p>
+<h3>
+<a id="core-competencies" class="anchor" href="#core-competencies" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Core competencies</h3>
+<blockquote>
 <ul>
-<li>Adept at delivering financial and market intelligence by examining data repositories, generating periodic reports, data visualization and devising
-methods for identifying data patterns/trends in information sources.</li>
-<li>Highly proficient in establishing collaborative partnerships with customers, colleagues, and vendors to stay abreast of industry/business
-trends.</li>
-<li>Proven ability to learn and adapt as per business requirements and excel in face of adversity by overcoming obstacles.</li>
-<li>Knowledgeable of analyzing competitive market strategies by evaluating related product, market, and share trends to synthesize current business intelligence data and provide recommendations for improvement.</li>
+<li>Machine Learning Design</li>
+<li>Statistical Analysis (Linear Regression, Logistics Regression, Hypothesis Testing, etc.)</li>
+<li>Strategic Analysis</li>
+<li>Team Collaboration</li>
+<li>Project Management</li>
+<li>Revenue Optimization</li>
+<li>Data Management</li>
+<li>Customer Relationship</li>
+</ul>
+</blockquote>
+<h3>
+<a id="technical-competencies" class="anchor" href="#technical-competencies" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Technical competencies</h3>
+<p><strong>Python, SQL, SAS, Hadoop, MS Office (Excel, Access, PowerPoint), PySpark, Tableau, PowerBI</strong></p>
+<h3>
+<a id="certifications" class="anchor" href="#certifications" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Certifications</h3>
+<blockquote>
+<ul>
+<li>
+<strong>SAS Certified Specialist</strong> – Base Programming Using SAS 9.4 and Advanced Programmer for SAS 9</li>
+<li>
+<strong>Google Analytics</strong> for Beginners and Advanced Google Analytics</li>
+<li>
+<strong>Microsoft Azure</strong> Fundamentals and Delivering the Modern Data Warehouse</li>
+<li>
+<strong>Amazon Web Services (AWS) Certified Solutions Architect</strong> – Associate Candidate</li>
+</ul>
+</blockquote>
+<h2>
+<a id="my-data-science-projects" class="anchor" href="#my-data-science-projects" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>My Data Science Projects</h2>
+<h3>
+<a id="time-series-project" class="anchor" href="#time-series-project" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Time Series Project</h3>
+<h4>
+<a id="m5-forecast---accuracy--estimate-the-unit-sales-of-walmart-retail-goods" class="anchor" href="#m5-forecast---accuracy--estimate-the-unit-sales-of-walmart-retail-goods" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/claudiawang-tech/M5-Forecasting---Accuracy">M5 Forecast - Accuracy | Estimate the unit sales of Walmart retail goods</a>
+</h4>
+<ul>
+<li>Kaggle Code Competition: Bronze Medal, Top 7% of 5,558 Teams</li>
+<li>Language: Python</li>
+<li>Feature Engineering</li>
+<li>LightGBM</li>
 </ul>
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<a id="nlp-project" class="anchor" href="#nlp-project" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>NLP Project</h3>
+<h4>
+<a id="tweet-sentiment-extraction--extract-support-phrases-for-sentiment-labels" class="anchor" href="#tweet-sentiment-extraction--extract-support-phrases-for-sentiment-labels" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tweet Sentiment Extraction | Extract support phrases for sentiment labels</h4>
+<ul>
+<li>Kaggle Code Competition</li>
+<li>Language: Python</li>
+<li>BERT Model</li>
+</ul>
+<h3></h3>
+<h2>
+<a id="my-data-visualization-projects" class="anchor" href="#my-data-visualization-projects" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>My Data Visualization Projects</h2>
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<a id="kmpg-virtual-internship" class="anchor" href="#kmpg-virtual-internship" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>KMPG Virtual Internship.</h3>
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a class="user-mention" data-hovercard-type="user" data-hovercard-url="/users/defunkt/hovercard" data-octo-click="hovercard-link-click" data-octo-dimensions="link_type:self" href="https://github.com/defunkt">@defunkt</a>), PJ Hyett (<a class="user-mention" data-hovercard-type="user" data-hovercard-url="/users/pjhyett/hovercard" data-octo-click="hovercard-link-click" data-octo-dimensions="link_type:self" href="https://github.com/pjhyett">@pjhyett</a>), and Tom Preston-Werner (<a class="user-mention" data-hovercard-type="user" data-hovercard-url="/users/mojombo/hovercard" data-octo-click="hovercard-link-click" data-octo-dimensions="link_type:self" href="https://github.com/mojombo">@mojombo</a>) founded GitHub.</p>
-<h3>
-<a id="contact-me" class="anchor" href="#contact-me" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact Me</h3>
-<p>.</p>
+<a id="rcmp" class="anchor" href="#rcmp" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>RCMP.</h3>
+<h2>
+<a id="contact-me" class="anchor" href="#contact-me" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact Me.</h2>
+<p>Linkedin Link: <a href="https://www.linkedin.com/in/zi-claudia-wang-901592a2/">LinkedIn</a></p>
+<p>Email: <a href="mailto:claudiawangubc@gmail.com">claudiawangubc@gmail.com</a></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/claudiawang-tech/claudiawang.github.io">Claudia Wang&#39;s Porfolio</a> is maintained by <a href="https://github.com/claudiawang-tech">claudiawang-tech</a>.</span>
