Create master branch via GitHub

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <section class="main-content">
       <h1>
-<a id="about-me" class="anchor" href="#about-me" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><strong>About Me.</strong>
+<a id="about-me" class="anchor" href="#about-me" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><strong>About Me</strong>
 </h1>
 <p>Hello! This is <strong>Claudia Wang</strong>. A detail-oriented <strong>Data Analyst professional</strong>.</p>
 <p>I recently completed the <strong>Master of Business Analytics</strong> from SCHULICH School of Business, York University and worked as a <strong>Data Analyst Intern</strong> at the Art Gallery of Ontario during the last eight months.</p>
@@ -28,14 +28,15 @@
 <a id="core-competencies" class="anchor" href="#core-competencies" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Core competencies</h3>
 <blockquote>
 <ul>
-<li>Machine Learning Design</li>
-<li>Statistical Analysis (Linear Regression, Logistics Regression, Hypothesis Testing, etc.)</li>
-<li>Strategic Analysis</li>
-<li>Team Collaboration</li>
-<li>Project Management</li>
-<li>Revenue Optimization</li>
-<li>Data Management</li>
-<li>Customer Relationship</li>
+<li><strong>Machine Learning Design</strong></li>
+<li>
+<strong>Statistical Analysis</strong> (Linear Regression, Logistics Regression, Hypothesis Testing, etc.)</li>
+<li><strong>Strategic Analysis</strong></li>
+<li><strong>Team Collaboration</strong></li>
+<li><strong>Project Management</strong></li>
+<li><strong>Revenue Optimization</strong></li>
+<li><strong>Data Management</strong></li>
+<li><strong>Customer Relationship</strong></li>
 </ul>
 </blockquote>
 <h3>
@@ -55,37 +56,86 @@
 <strong>Amazon Web Services (AWS) Certified Solutions Architect</strong> – Associate Candidate</li>
 </ul>
 </blockquote>
+<h1>
+<a id="my-data-science-projects" class="anchor" href="#my-data-science-projects" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><strong>My Data Science Projects</strong>
+</h1>
 <h2>
-<a id="my-data-science-projects" class="anchor" href="#my-data-science-projects" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>My Data Science Projects</h2>
+<a id="time-series-project" class="anchor" href="#time-series-project" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Time Series Project</h2>
 <h3>
-<a id="time-series-project" class="anchor" href="#time-series-project" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Time Series Project</h3>
-<h4>
-<a id="m5-forecast---accuracy--estimate-the-unit-sales-of-walmart-retail-goods" class="anchor" href="#m5-forecast---accuracy--estimate-the-unit-sales-of-walmart-retail-goods" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/claudiawang-tech/M5-Forecasting---Accuracy">M5 Forecast - Accuracy | Estimate the unit sales of Walmart retail goods</a>
-</h4>
+<a id="m5-forecast---accuracy--estimate-the-unit-sales-of-walmart-retail-goods-" class="anchor" href="#m5-forecast---accuracy--estimate-the-unit-sales-of-walmart-retail-goods-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/claudiawang-tech/M5-Forecasting---Accuracy">M5 Forecast - Accuracy | Estimate the unit sales of Walmart retail goods</a> &gt;</h3>
+<blockquote>
 <ul>
-<li>Kaggle Code Competition: Bronze Medal, Top 7% of 5,558 Teams</li>
+<li>Kaggle Code Competition: <strong>Bronze Medal, Top 7% of 5,558 Teams</strong>
+</li>
 <li>Language: Python</li>
-<li>Feature Engineering</li>
-<li>LightGBM</li>
+<li><strong>Feature Engineering</strong></li>
+<li><strong>LightGBM</strong></li>
 </ul>
+</blockquote>
+<h2>
+<a id="nlp-project" class="anchor" href="#nlp-project" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>NLP Project</h2>
 <h3>
-<a id="nlp-project" class="anchor" href="#nlp-project" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>NLP Project</h3>
-<h4>
-<a id="tweet-sentiment-extraction--extract-support-phrases-for-sentiment-labels" class="anchor" href="#tweet-sentiment-extraction--extract-support-phrases-for-sentiment-labels" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tweet Sentiment Extraction | Extract support phrases for sentiment labels</h4>
+<a id="tweet-sentiment-extraction--extract-support-phrases-for-sentiment-labels" class="anchor" href="#tweet-sentiment-extraction--extract-support-phrases-for-sentiment-labels" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tweet Sentiment Extraction | Extract support phrases for sentiment labels</h3>
+<blockquote>
 <ul>
-<li>Kaggle Code Competition</li>
+<li>Kaggle Code Competition: Top 28% of 2000 teams</li>
 <li>Language: Python</li>
-<li>BERT Model</li>
+<li><strong>BERT Model: roBERTa</strong></li>
 </ul>
-<h3></h3>
+</blockquote>
 <h2>
-<a id="my-data-visualization-projects" class="anchor" href="#my-data-visualization-projects" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>My Data Visualization Projects</h2>
+<a id="regression-project" class="anchor" href="#regression-project" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Regression Project</h2>
 <h3>
-<a id="kmpg-virtual-internship" class="anchor" href="#kmpg-virtual-internship" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>KMPG Virtual Internship.</h3>
-<h3>
-<a id="rcmp" class="anchor" href="#rcmp" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>RCMP.</h3>
+<a id="allstate-claims-severity--create-an-algorithm-accurately-predicting-claims-severity" class="anchor" href="#allstate-claims-severity--create-an-algorithm-accurately-predicting-claims-severity" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Allstate Claims Severity | Create an algorithm accurately predicting claims severity</h3>
+<blockquote>
+<ul>
+<li>Kaggle Recruitment Recruitment Prediction Competition</li>
+<li>Language: Python</li>
+<li><strong>Feature Engineering</strong></li>
+<li><strong>XGBoost</strong></li>
+</ul>
+</blockquote>
 <h2>
-<a id="contact-me" class="anchor" href="#contact-me" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact Me.</h2>
+<a id="deep-learning-project" class="anchor" href="#deep-learning-project" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Deep Learning Project</h2>
+<h3>
+<a id="bitcoin-price-prediction" class="anchor" href="#bitcoin-price-prediction" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Bitcoin Price Prediction</h3>
+<blockquote>
+<ul>
+<li>Language: Python</li>
+<li>Recurrent Neural Network (<strong>RNN</strong>) model</li>
+<li>Linear Support Vector Machines (<strong>SVM</strong>) model</li>
+<li><strong>PyTrend</strong></li>
+<li>
+<strong>TensorTrade</strong> for <strong>Reinforcement Learning</strong>
+</li>
+</ul>
+</blockquote>
+<h1>
+<a id="my-data-visualization-projects" class="anchor" href="#my-data-visualization-projects" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><strong>My Data Visualization Projects</strong>
+</h1>
+<h3>
+<a id="kmpg-virtual-internship--discover-potential-customers-to-maximize-values" class="anchor" href="#kmpg-virtual-internship--discover-potential-customers-to-maximize-values" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/claudiawang-tech/Data-Visual-Internship">KMPG Virtual Internship | Discover potential customers to maximize values</a>
+</h3>
+<blockquote>
+<ul>
+<li>Analytics tools: <strong>Tableau</strong>
+</li>
+<li>Dashboards for existing customers, previous transactions and new customers</li>
+<li>Logistics Regression Model</li>
+</ul>
+</blockquote>
+<h3>
+<a id="toronto-police-service-tps-incidents-analysis--find-better-ways-to-dispatch-incidents" class="anchor" href="#toronto-police-service-tps-incidents-analysis--find-better-ways-to-dispatch-incidents" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Toronto Police Service (TPS) Incidents Analysis | Find better ways to dispatch incidents</h3>
+<blockquote>
+<ul>
+<li>Analytics tools: <strong>Tableau</strong>
+</li>
+<li>Dashboards for the incident types and the regions the incident happened</li>
+</ul>
+</blockquote>
+<h1>
+<a id="contact-me" class="anchor" href="#contact-me" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><strong>Contact Me</strong>
+</h1>
 <p>Linkedin Link: <a href="https://www.linkedin.com/in/zi-claudia-wang-901592a2/">LinkedIn</a></p>
 <p>Email: <a href="mailto:claudiawangubc@gmail.com">claudiawangubc@gmail.com</a></p>
 
