Create master branch via GitHub

--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
 <h2>
 <a id="time-series-project" class="anchor" href="#time-series-project" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Time Series Project</h2>
 <h3>
-<a id="m5-forecast---accuracy--estimate-the-unit-sales-of-walmart-retail-goods-" class="anchor" href="#m5-forecast---accuracy--estimate-the-unit-sales-of-walmart-retail-goods-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/claudiawang-tech/M5-Forecasting---Accuracy">M5 Forecast - Accuracy | Estimate the unit sales of Walmart retail goods</a> &gt;</h3>
+<a id="m5-forecast---accuracy--estimate-the-unit-sales-of-walmart-retail-goods" class="anchor" href="#m5-forecast---accuracy--estimate-the-unit-sales-of-walmart-retail-goods" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/claudiawang-tech/M5-Forecasting---Accuracy">M5 Forecast - Accuracy | Estimate the unit sales of Walmart retail goods</a>
+</h3>
 <blockquote>
 <ul>
 <li>Kaggle Code Competition: <strong>Bronze Medal, Top 7% of 5,558 Teams</strong>
