Create master branch via GitHub

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 <h2>
 <a id="deep-learning-project" class="anchor" href="#deep-learning-project" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Deep Learning Project</h2>
 <h3>
-<a id="bitcoin-price-prediction" class="anchor" href="#bitcoin-price-prediction" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Bitcoin Price Prediction</h3>
+<a id="bitcoin-price-prediction--develop-trading-strategies-for-live-trading" class="anchor" href="#bitcoin-price-prediction--develop-trading-strategies-for-live-trading" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Bitcoin Price Prediction | Develop trading strategies for live trading</h3>
 <blockquote>
 <ul>
 <li>Language: Python</li>
