Create master branch via GitHub

--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
 <h2>
 <a id="nlp-project" class="anchor" href="#nlp-project" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>NLP Project</h2>
 <h3>
-<a id="tweet-sentiment-extraction--extract-support-phrases-for-sentiment-labels" class="anchor" href="#tweet-sentiment-extraction--extract-support-phrases-for-sentiment-labels" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tweet Sentiment Extraction | Extract support phrases for sentiment labels</h3>
+<a id="tweet-sentiment-extraction--extract-support-phrases-for-sentiment-labels" class="anchor" href="#tweet-sentiment-extraction--extract-support-phrases-for-sentiment-labels" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/claudiawang-tech/Tweet-Sentiment-Extraction">Tweet Sentiment Extraction | Extract support phrases for sentiment labels</a>
+</h3>
 <blockquote>
 <ul>
 <li>Kaggle Code Competition: Top 28% of 2000 teams</li>
