Create master branch via GitHub

--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
 <h2>
 <a id="regression-project" class="anchor" href="#regression-project" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Regression Project</h2>
 <h3>
-<a id="allstate-claims-severity--create-an-algorithm-accurately-predicting-claims-severity" class="anchor" href="#allstate-claims-severity--create-an-algorithm-accurately-predicting-claims-severity" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Allstate Claims Severity | Create an algorithm accurately predicting claims severity</h3>
+<a id="allstate-claims-severity--create-an-algorithm-accurately-predicting-claims-severity" class="anchor" href="#allstate-claims-severity--create-an-algorithm-accurately-predicting-claims-severity" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/claudiawang-tech/Insurance-prediction">Allstate Claims Severity | Create an algorithm accurately predicting claims severity</a>
+</h3>
 <blockquote>
 <ul>
 <li>Kaggle Recruitment Recruitment Prediction Competition</li>
