Create master branch via GitHub

--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
 </h1>
 <p>Linkedin Link: <a href="https://www.linkedin.com/in/zi-claudia-wang-901592a2/">LinkedIn</a></p>
 <p>Email: <a href="mailto:claudiawangubc@gmail.com">claudiawangubc@gmail.com</a></p>
+<p>Kaggle Profile: <a href="https://www.kaggle.com/claudiawang">Kaggle</a></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/claudiawang-tech/porfolio">Claudia Wang&#39;s Porfolio</a> is maintained by <a href="https://github.com/claudiawang-tech">claudiawang-tech</a>.</span>
