--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <a id="core-competencies" class="anchor" href="#core-competencies" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Core competencies</h3>
 <blockquote>
 <ul>
-<li><strong>Machine Learning Design</strong> (K-Nearest Neighbors, Support Vector Machines, Boosting, Neural Networks, etc.)</li>
+<li><strong>Machine Learning Design</strong> (K-Nearest Neighbors, Neural Networks, Deep Learning, NLP, Reinforcement Learning, SVM, etc.)</li>
 <li>
 <strong>Statistical Analysis</strong> (Linear Regression, Logistics Regression, Hypothesis Testing, etc.)</li>
 <li><strong>Strategic Analysis</strong></li>
